<resources>
    <string name="app_name">Tinkoff x Zulip</string>

    <string name="stream_name">#%1s</string>
    <string name="topic_name">Topic: #%1s</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="message_count">%1s mes</string>
    <string name="move_to">Move to …</string>
    <string name="editing">Editing</string>
    <string name="create_stream">Create stream</string>
    <string name="announce">Announce new stream</string>
    <string name="waiting_for_connection">Waiting for connection…</string>

    <!-- Action -->
    <string name="action_send_message">Send message</string>
    <string name="action_attach">Add an attachment</string>
    <string name="action_done">Done</string>
    <string name="action_logout">Log out</string>
    <string name="action_repeat">Repeat</string>
    <string name="action_search">Search</string>
    <string name="action_new_stream">New stream</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_copy">Copy</string>
    <string name="action_add_reaction">Add reaction</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_change_topic">Change topic</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>

    <!--  Error  -->
    <string name="unknown_error">Oops… something went wrong</string>

    <!-- Hint -->
    <string name="hint_message">Message</string>
    <string name="hint_add_description">Add description</string>
    <string name="hint_email">Email</string>
    <string name="hint_apiKey">API key</string>
    <string name="hint_description">Description</string>
    <string name="hint_name">Name</string>
    <string name="sign_up_hint">Don\'t have an account? <a href="https://zulip.com/">Sing up!</a></string>
    <string name="no_topics_to_move_to">No topics to move to ¯\\ (ツ) /¯</string>

    <!-- Emoji -->
    <string name="emoji_plus">➕</string>

    <!-- User status -->
    <string name="status_offline">Offline</string>
    <string name="status_idle">Idle</string>
    <string name="status_active">Active</string>
</resources>