<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_rounded"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="18dp">

    <TextView
        android:id="@+id/add_reaction"
        style="@style/MessageAction"
        android:text="@string/action_add_reaction"
        app:drawableLeftCompat="@drawable/ic_reaction" />

    <TextView
        android:id="@+id/copy"
        style="@style/MessageAction"
        android:text="@string/action_copy"
        app:drawableLeftCompat="@drawable/ic_copy" />

    <TextView
        android:id="@+id/edit"
        style="@style/MessageAction"
        android:text="@string/action_edit"
        app:drawableLeftCompat="@drawable/ic_edit" />


    <TextView
        android:id="@+id/change_topic"
        style="@style/MessageAction"
        android:text="@string/action_change_topic"
        app:drawableLeftCompat="@drawable/ic_file_move_rtl" />


    <TextView
        android:id="@+id/delete"
        style="@style/MessageAction"
        android:text="@string/action_delete"
        app:drawableLeftCompat="@drawable/ic_delete"
        app:drawableTint="@android:color/holo_red_dark" />

</LinearLayout>