<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_stream"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/stream_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_name"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <EditText
                android:id="@+id/stream_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_description"
                app:layout_constraintTop_toBottomOf="@id/stream_name" />

            <CheckBox
                android:id="@+id/check_announce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/announce"
                app:layout_constraintStart_toStartOf="@+id/stream_description"
                app:layout_constraintTop_toBottomOf="@+id/stream_description" />

            <Button
                android:id="@+id/dismiss_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="8dp"
                android:text="@string/action_cancel"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/confirm_button"
                app:layout_constraintRight_toLeftOf="@+id/confirm_button"
                app:layout_constraintTop_toTopOf="@+id/confirm_button"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/almost_white"
                android:text="@string/action_confirm"
                android:textAllCaps="false"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_announce" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_half_transparent"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="?attr/colorPrimary"
                android:indeterminateTintMode="src_atop" />

        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>